# roomba_bot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: robot.hpp
launch/: .teleop.launch.swp  roomba.launch  teleop.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: .teleop.cpp.swp  .walker.cpp.swo  robot.cpp  teleop.cpp  walker.cpp
